// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TierAndListTypeFormComponent rendering should render the empty form 1`] = `
<tier-and-list-type-form
  cancel={[Function OutputEmitterRef]}
  cancelRoute={[Function Function]}
  errors={[Function OutputEmitterRef]}
  fixedDateSelected={[Function Function]}
  form={[Function FormGroup]}
  hearingId={[Function Function]}
  keyReasonMaxLength={[Function Number]}
  listTypeOptions={[Function Array]}
  ptphDetail={[Function Function]}
  save={[Function OutputEmitterRef]}
  tierOptions={[Function Array]}
>
  <form
    class="ng-untouched ng-pristine ng-invalid"
    novalidate=""
    pdk-form=""
  >
    <pdk-form-field
      labeltype="small"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <fieldset
          class="govuk-fieldset"
          pdk-fieldset=""
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
             TIER_AND_LIST_TYPE.SELECT_TIER 
          </legend>
          <pdk-radio-group
            class="ng-untouched ng-pristine ng-invalid"
            formcontrolname="tier"
          >
            <div
              class="govuk-radios"
            >
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_1"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_1_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_1_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_2"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_2_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_2_INTRO 
                        <ul
                          class="govuk-!-margin-bottom-0 pdk-!-text-color-dark-grey govuk-list govuk-list--bullet"
                          pdk-list="bullet"
                          pdk-margin-bottom="0"
                          pdk-text-colour="dark-grey"
                        >
                          <li>
                            TIER_AND_LIST_TYPE.TIER_2_BULLET_1
                          </li>
                          <li>
                            TIER_AND_LIST_TYPE.TIER_2_BULLET_2
                          </li>
                          <li>
                            TIER_AND_LIST_TYPE.TIER_2_BULLET_3
                          </li>
                          <li>
                            TIER_AND_LIST_TYPE.TIER_2_BULLET_4
                          </li>
                          <li>
                            TIER_AND_LIST_TYPE.TIER_2_BULLET_5
                          </li>
                        </ul>
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_3"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_3_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_3_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_4"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_4_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_4_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_5"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_5_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_5_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_6"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_6_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_6_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_7"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_7_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_7_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
            </div>
          </pdk-radio-group>
        </fieldset>
      </pdk-form-group>
    </pdk-form-field>
    <pdk-divider>
      <hr
        class="pdk-divider"
      />
    </pdk-divider>
    <pdk-form-field
      labeltype="small"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <fieldset
          class="govuk-fieldset"
          pdk-fieldset=""
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
             TIER_AND_LIST_TYPE.SELECT_LIST_TYPE 
          </legend>
          <pdk-radio-group
            class="ng-untouched ng-pristine ng-valid"
            formcontrolname="listType"
          >
            <div
              class="govuk-radios"
            >
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TYPE_1_FIXED"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.LIST_TYPE_1_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                        TIER_AND_LIST_TYPE.LIST_TYPE_1_HINT
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TYPE_2_FLEXIBLE"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.LIST_TYPE_2_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                        TIER_AND_LIST_TYPE.LIST_TYPE_2_HINT
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
            </div>
          </pdk-radio-group>
          <div
            class="govuk-!-margin-top-2"
            pdk-margin-top="2"
          >
            <a
              class="govuk-link govuk-link--no-visited-state"
              href="javascript:void(0)"
              pdk-link=""
              unvisited=""
            >
               TIER_AND_LIST_TYPE.CLEAR_LIST_TYPE 
            </a>
          </div>
        </fieldset>
      </pdk-form-group>
    </pdk-form-field>
    <pdk-divider>
      <hr
        class="pdk-divider"
      />
    </pdk-divider>
    <pdk-button-group>
      <div
        class="govuk-button-group"
      >
        <button
          class="govuk-button"
          pdk-button=""
          type="submit"
        >
           TIER_AND_LIST_TYPE.SAVE_AND_CONTINUE 
        </button>
        <a
          class="govuk-link govuk-link--no-visited-state"
          href="/manage/hearing-1/tier-and-list-type"
          pdk-link=""
          unvisited=""
        >
           TIER_AND_LIST_TYPE.CANCEL 
        </a>
      </div>
    </pdk-button-group>
  </form>
</tier-and-list-type-form>
`;

exports[`TierAndListTypeFormComponent rendering should render the form with a fixed date list type selected 1`] = `
<tier-and-list-type-form
  cancel={[Function OutputEmitterRef]}
  cancelRoute={[Function Function]}
  errors={[Function OutputEmitterRef]}
  fixedDateSelected={[Function Function]}
  form={[Function FormGroup]}
  hearingId={[Function Function]}
  keyReasonMaxLength={[Function Number]}
  listTypeOptions={[Function Array]}
  ptphDetail={[Function Function]}
  save={[Function OutputEmitterRef]}
  tierOptions={[Function Array]}
>
  <form
    class="ng-untouched ng-pristine ng-invalid"
    novalidate=""
    pdk-form=""
  >
    <pdk-form-field
      labeltype="small"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <fieldset
          class="govuk-fieldset"
          pdk-fieldset=""
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
             TIER_AND_LIST_TYPE.SELECT_TIER 
          </legend>
          <pdk-radio-group
            class="ng-untouched ng-pristine ng-invalid"
            formcontrolname="tier"
          >
            <div
              class="govuk-radios"
            >
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_1"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_1_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_1_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_2"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_2_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_2_INTRO 
                        <ul
                          class="govuk-!-margin-bottom-0 pdk-!-text-color-dark-grey govuk-list govuk-list--bullet"
                          pdk-list="bullet"
                          pdk-margin-bottom="0"
                          pdk-text-colour="dark-grey"
                        >
                          <li>
                            TIER_AND_LIST_TYPE.TIER_2_BULLET_1
                          </li>
                          <li>
                            TIER_AND_LIST_TYPE.TIER_2_BULLET_2
                          </li>
                          <li>
                            TIER_AND_LIST_TYPE.TIER_2_BULLET_3
                          </li>
                          <li>
                            TIER_AND_LIST_TYPE.TIER_2_BULLET_4
                          </li>
                          <li>
                            TIER_AND_LIST_TYPE.TIER_2_BULLET_5
                          </li>
                        </ul>
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_3"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_3_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_3_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_4"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_4_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_4_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_5"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_5_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_5_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_6"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_6_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_6_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TIER_7"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.TIER_7_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         TIER_AND_LIST_TYPE.TIER_7_DESCRIPTION 
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
            </div>
          </pdk-radio-group>
        </fieldset>
      </pdk-form-group>
    </pdk-form-field>
    <pdk-divider>
      <hr
        class="pdk-divider"
      />
    </pdk-divider>
    <pdk-form-field
      labeltype="small"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <fieldset
          class="govuk-fieldset"
          pdk-fieldset=""
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
             TIER_AND_LIST_TYPE.SELECT_LIST_TYPE 
          </legend>
          <pdk-radio-group
            class="ng-untouched ng-pristine ng-valid"
            formcontrolname="listType"
          >
            <div
              class="govuk-radios"
            >
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TYPE_1_FIXED"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.LIST_TYPE_1_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                        TIER_AND_LIST_TYPE.LIST_TYPE_1_HINT
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-conditional>
                <div
                  class="govuk-radios__conditional"
                >
                  <pdk-form-field
                    labeltype="small"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <label
                        class="govuk-label govuk-label--s"
                        for="pdk-form-control-undefined-GENERATED_ID"
                      >
                         TIER_AND_LIST_TYPE.KEY_REASON_LABEL 
                      </label>
                      <textarea
                        class="ng-untouched ng-pristine ng-invalid govuk-input"
                        formcontrolname="keyReason"
                        id="pdk-form-control-undefined-GENERATED_ID"
                        pdk-input=""
                        pdk-resize=""
                        pdk-text-input=""
                        style="resize: none; min-height: NaNpx; max-height: NaNpx;"
                      />
                      <pdk-character-count>
                        <span
                          aria-live="polite"
                          class="govuk-hint govuk-character-count__message"
                        >
                           You have 500 characters remaining 
                        </span>
                      </pdk-character-count>
                    </pdk-form-group>
                  </pdk-form-field>
                </div>
              </pdk-radio-conditional>
              <pdk-radio-button>
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="TYPE_2_FLEXIBLE"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     TIER_AND_LIST_TYPE.LIST_TYPE_2_LABEL 
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                        TIER_AND_LIST_TYPE.LIST_TYPE_2_HINT
                      </div>
                    </pdk-hint>
                  </label>
                </div>
              </pdk-radio-button>
            </div>
          </pdk-radio-group>
          <div
            class="govuk-!-margin-top-2"
            pdk-margin-top="2"
          >
            <a
              class="govuk-link govuk-link--no-visited-state"
              href="javascript:void(0)"
              pdk-link=""
              unvisited=""
            >
               TIER_AND_LIST_TYPE.CLEAR_LIST_TYPE 
            </a>
          </div>
        </fieldset>
      </pdk-form-group>
    </pdk-form-field>
    <pdk-divider>
      <hr
        class="pdk-divider"
      />
    </pdk-divider>
    <pdk-button-group>
      <div
        class="govuk-button-group"
      >
        <button
          class="govuk-button"
          pdk-button=""
          type="submit"
        >
           TIER_AND_LIST_TYPE.SAVE_AND_CONTINUE 
        </button>
        <a
          class="govuk-link govuk-link--no-visited-state"
          href="/manage/hearing-1/tier-and-list-type"
          pdk-link=""
          unvisited=""
        >
           TIER_AND_LIST_TYPE.CANCEL 
        </a>
      </div>
    </pdk-button-group>
  </form>
</tier-and-list-type-form>
`;
